completed ch4/part I

--- a/Part_1_Basic_Toolkit/Ch.04_Webdev101/index_javascripted_svg.html
+++ b/Part_1_Basic_Toolkit/Ch.04_Webdev101/index_javascripted_svg.html
@@ -7,6 +7,10 @@
   #chart circle {
     fill: red;
   }
+  #chart line {
+    stroke: blue;
+    stroke-width: 3px;
+  }
 </style>
 <body>
   <svg id="chart"></svg>
