--- a/Part_1_Basic_Toolkit/Ch.04_Webdev101/index_flex.html
+++ b/Part_1_Basic_Toolkit/Ch.04_Webdev101/index_flex.html
@@ -18,9 +18,9 @@
     /* justify-content: space-between; */
     /* justify-content: space-around; */
     /* The following centers the content: */
-    /* gap: 20px;
+    gap: 20px;
     justify-content: center;
-    align-items: center; */
+    align-items: center;
   }
 
   .box {
