--- a/Part_1_Basic_Toolkit/Ch.04_Webdev101/index_svg_2.html
+++ b/Part_1_Basic_Toolkit/Ch.04_Webdev101/index_svg_2.html
@@ -9,17 +9,19 @@
   <div class="curves">
     <h2>SVG Curves</h2>
 <svg id="chart" width="300" height="150">
-  <path d="M40 40
+  <path d="
+  M40 40
   A30 40
   0 0 1
   80 80
   A50 50 0 0 1 160 80
   A30 30 0 0 1 190 80
- " />
+  "/>
  </svg>
 
  <svg id="chart" width="300" height="150">
-  <path d="M40 80
+  <path d="
+  M40 80
   A30 40 0 0 1 80 80
   A30 40 0 0 0 120 80
   A30 40 0 1 0 160 80
@@ -30,7 +32,7 @@
 <div class="transforms">
   <h2>Scaling and Rotating</h2>
   <svg id="chart" width="300" height="150">
-    <rect width="20" height="40" transform="translate(60, 55)"
+    <rect width="20" height="40" transform="translate(60, 15)"
     fill="blue"/>
     <rect width="20" height="40" transform="translate(120, 55),
     rotate(45)" fill="blue"/>
@@ -46,7 +48,10 @@
     <g id="shapes" transform="translate(150,75)">
     <circle cx="50" cy="0" r="25" fill="red" />
     <rect x="30" y="10" width="40" height="20" fill="blue" />
-    <path d="M-20 -10L50 -10L10 60Z" fill="green" />
+    <path d="
+    M-20 -10
+    L50 -10
+    L10 60Z" fill="green" />
     <circle r="10" fill="yellow">
     </g>
    </svg>
