--- a/Part_5_Visualizing_your_Data_with_Plotly_and_D3/Ch.14-Bringing_your_Charts_to_the_Web/user-driven-plotly-with-js-and-html/index.html
+++ b/Part_5_Visualizing_your_Data_with_Plotly_and_D3/Ch.14-Bringing_your_Charts_to_the_Web/user-driven-plotly-with-js-and-html/index.html
@@ -1,42 +1,52 @@
-<link rel="stylesheet" href="styles/index.css" />
+<!DOCTYPE html>
+<html lang="en">
+  <head>
+    <meta charset="UTF-8">
+    <title>User-Driven Plotly with JavaScript and HTML</title>
+    <link rel="stylesheet" href="styles/index.css"/>
+  </head>
 
-<div class="main">
-  <h1 class="title">The Nobel Prize</h1>
-  <h2>From notebook to the web with Plotly</h2>
+  <body>
 
-  <div class="intro">
-    <p>
-      Some nuggets of data mined from a dataset of Nobel prize winners (2016).
-    </p>
-  </div>
+    <div class="main">
+      <h1 class="title">The Nobel Prize</h1>
+      <h2>From notebook to the web with Plotly</h2>
 
-  <div class="container" id="by-country-container">
-    <div class="info-box">
-      <p>
-        These violin plots show the distribution of award ages for gender and
-        category groups. You can use the group selector to choose which gets
-        charted.
-      </p>
-      <p>
-        Note that women tend to be awarded prizes earlier than men (peaks at 55
-        vs 62). Prizes for science tend to be awarded earlier than those for
-        economics, literature or peace.
-      </p>
+      <div class="intro">
+        <p>
+          Some nuggets of data mined from a dataset of Nobel prize winners (2016).
+        </p>
+      </div>
+
+      <div class="container" id="by-country-container">
+        <div class="info-box">
+          <p>
+            These violin plots show the distribution of award ages for gender and
+            category groups. You can use the group selector to choose which gets
+            charted.
+          </p>
+          <p>
+            Note that women tend to be awarded prizes earlier than men (peaks at 55
+            vs 62). Prizes for science tend to be awarded earlier than those for
+            economics, literature or peace.
+          </p>
+        </div>
+
+        <div class="chart-wrapper" id="by-country">
+          <div class="chart" id="violin-group"></div>
+        </div>
+      </div>
+
+      <div id="chart-ui">
+        <div id="nobel-group-select-holder">
+          <label for="nobel-group">Group:</label>
+          <select name="nobel-group" id="nobel-group"></select>
+        </div>
+      </div>
     </div>
 
-    <div class="chart-wrapper" id="by-country">
-      <div class="chart" id="violin-group"></div>
-    </div>
-  </div>
-
-  <div id="chart-ui">
-    <div id="nobel-group-select-holder">
-      <label for="nobel-group">Group:</label>
-      <select name="nobel-group" id="nobel-group"></select>
-    </div>
-  </div>
-</div>
-
-<script src="https://cdn.plot.ly/plotly-2.9.0.min.js"></script>
-<script src="https://cdnjs.cloudflare.com/ajax/libs/d3/7.4.2/d3.min.js"></script>
-<script src="scripts/index.js"></script>
+    <script src="https://cdn.plot.ly/plotly-2.9.0.min.js"></script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/d3/7.4.2/d3.min.js"></script>
+    <script src="scripts/index.js"></script>
+  </body>
+</html>
